--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
             <div class="select-menu" style="position: absolute;z-index: 11;right: 0;">
                 <div class="select">
                   <span style="display: flex;align-items: center;gap: 20px;">
-                    <img style="width: 20px;" src="https://flagicons.lipis.dev/flags/4x3/cn.svg" alt="flag-us"><span>chineese</span></span>
+                    <img style="width: 20px;" src="https://flagicons.lipis.dev/flags/4x3/cn.svg" alt="flag-us1"><span>chinese</span></span>
                   <i class="fas fa-angle-down"></i>
                 </div>
                 <div class="options-list">
                   <div class="option" style="display: flex;align-items: center;gap: 20px;"> 
-                    <img style="width: 20px;" src="https://flagicons.lipis.dev/flags/4x3/us.svg" alt="flag-us"> <span>english</span></div>
-                  <div class="option"  style="display: flex;align-items: center;gap: 20px;"><img style="width: 20px;" src="https://flagicons.lipis.dev/flags/4x3/cn.svg" alt="flag-us">chineese</div>
+                    <img style="width: 20px;" src="https://flagicons.lipis.dev/flags/4x3/us.svg" alt="flag-us2"> <span>english</span></div>
+                  <div class="option"  style="display: flex;align-items: center;gap: 20px;"><img style="width: 20px;" src="https://flagicons.lipis.dev/flags/4x3/cn.svg" alt="flag-us">chinese</div>
                   
                 </div>
               </div>
