--- a/Pages/pahang/pahang2.html
+++ b/Pages/pahang/pahang2.html
@@ -20,9 +20,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="https://malaysiakliatour.com/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://malaysiakliatour.com/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://malaysiakliatour.com/favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../../logo (2).png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../logo (2).png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../logo (2).png">
 
     <link rel="stylesheet" href="../../css/all.min.css">
     <!-- Google Tag Manager -->
