--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta name="description" content="Limited time offer! Enjoy holiday in Malaysia with only RM99/pax . The first all in one tour services in Malaysia. Book Now!">
     <meta name="author" content="PTH Malaysia">
 
-    <meta property="og:title" content="RM99/pax Holiday Package - Malaysia All In One Holiday Packages" />
+    <!-- <meta property="og:title" content="RM99/pax Holiday Package - Malaysia All In One Holiday Packages" /> -->
     <meta property="og:description" content="Limited time offer! Enjoy holiday in Malaysia with only RM99/pax . The first all in one tour services in Malaysia. Book Now!" />
-    <meta property="og:image" content="https://malaysiakliatour.com/custom/img/logo-removebg.png" />
+    <meta property="og:image" content="logo (2).png" />
     <meta property="og:url" content="https://malaysiakliatour.com" />
 
     <meta name="twitter:card" content="summary" />
