--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- <meta property="og:title" content="RM99/pax Holiday Package - Malaysia All In One Holiday Packages" /> -->
     <meta property="og:description" content="Limited time offer! Enjoy holiday in Malaysia with only RM99/pax . The first all in one tour services in Malaysia. Book Now!" />
     <meta property="og:image" content="logo (2).png" />
-    <meta property="og:url" content="https://malaysiakliatour.com" />
+    <!-- <meta property="og:url" content="https://malaysiakliatour.com" /> -->
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="" />
